--- a/src/Pages/Home/HomeBanner/HomeBanner.css
+++ b/src/Pages/Home/HomeBanner/HomeBanner.css
@@ -1,15 +1,11 @@
-/* .container {
-    position: relative;
-    width: 100%;
-} */
 .home-banner-img {
     width: 100%;
-  
+    height: 500px;
 }
 
-.text-block {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+@media only screen and (max-width: 600px) {
+    .home-banner-img {
+        width: 100%;
+        height: 150px;
+    }
 }
