--- a/src/Pages/Login/LoginRegister.css
+++ b/src/Pages/Login/LoginRegister.css
@@ -1,3 +1,15 @@
 .bg-img{
     background-image: url("../../assets/BackgroundImg/brickBg.jpg");
-   }
+}
+.email-phone-pass-section{
+    display: flex;
+}
+
+@media only screen and (max-width: 600px) {
+    .email-phone-pass-section{
+        display: flex;
+        flex-direction: column;
+        width: 300px;
+    }
+
+}
