--- a/src/Pages/Home/Countdown/Countdown.css
+++ b/src/Pages/Home/Countdown/Countdown.css
@@ -21,6 +21,7 @@
     margin: 1px;
     width: 25px;
     height: 25px; /* Set the height to match the width for a square shape */
+    text-align: center;
   }
   
   .label {
@@ -33,15 +34,5 @@
   }
   
   /* Media query for 600px devices */
-  @media (max-width: 600px) {
-    .digit-box {
-      width: 12.5px; /* 50% of the original width */
-      height: 12.5px; /* 50% of the original height */
-      font-size: 10px; /* Adjust the font size for smaller devices */
-    }
   
-    .label {
-      font-size: 10px; /* Adjust the font size for smaller devices */
-    }
-  }
   
