--- a/src/Pages/Home/ContactInfo/ContactInfo.css
+++ b/src/Pages/Home/ContactInfo/ContactInfo.css
@@ -5,10 +5,13 @@
     margin: 100px 120px;
     padding: 30px 0px;
 }
-
+.input-box{
+    width: 280px;
+}
 @media only screen and (max-width: 600px) {
     .home-contact-section {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         border-radius: 20px;
         margin: 50px 10px;
